# fn-search-backend

./: .gitignore  Cargo.toml  config.toml  config.toml.example  readme.md
db/: .gitignore  Cargo.toml
db/migrations/2018-10-20-222216_create_repository/: down.sql  up.sql
db/migrations/2018-10-20-222347_create_function/: down.sql  up.sql
db/migrations/2018-10-22-203347_create_repositories/: down.sql  up.sql
db/migrations/2018-10-22-203352_create_functions/: down.sql  up.sql
db/migrations/2018-10-22-205644_repositories_url_unique/: down.sql  up.sql
db/migrations/2018-11-02-202322_repositories_name_unique/: down.sql  up.sql
db/migrations/2019-01-17-191021_create-repo-function-materialized-view/: down.sql  up.sql
db/migrations/2019-01-19-212705_add_index_to_repo_func_mat_view_func_id/: down.sql  up.sql
db/migrations/2019-01-23-012217_repositories_add_version_tag/: down.sql  up.sql
db/src/: lib.rs  main.rs  models.rs  schema.rs  utils.rs
db/src/tests/: mod.rs
db/tests/: test.rs
parsers/: .gitignore  Cargo.toml  Main.elm
parsers/src/: helpers.rs  lib.rs  parser.rs  structs.rs
scrape/: Cargo.toml  readme.md
scrape/src/: chromium_dl.rs  db_queries.rs  elm_package.rs  git_repo.rs  main.rs  repo_cache.rs  repo_parse.rs  subprocess.rs
src/: lib.rs  tests.rs
src/tests/: mod.rs
web/: Cargo.toml
web/src/: app_state.rs  collections.rs  main.rs  queries.rs
web/src/actors/: fn_cache.rs
web/src/collections/: fn_cache.rs  mod.rs
web/src/queries/: functions.rs  mod.rs
web/src/tests/: fn_cache.rs  mod.rs
web/src/tests/collections/: fn_cache.rs  mod.rs
