[package]
name = "fn_search_backend_db"
version = "0.1.0"
authors = ["Andrew Houts <ahouts4@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.3.3", features = ["postgres"] }
diesel_migrations = { version = "1.3.0", features = ["postgres"] }
fn_search_backend = { path = ".." }
clap = "2.32.0"
serde = "1.0.80"
serde_derive = "1.0.80"

[[bin]]
name = "migrate"
path = "src/main.rs"
