[package]
name = "fn_search_backend_scrape"
version = "0.1.0"
authors = ["ahouts <ahouts4@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.9.4"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
rayon = "1.0.2"
clap = "2.32.0"
fn_search_backend = { path = ".." }
fn_search_backend_db = { path = "../db" }
fn_search_backend_parsers = { path = "../parsers" }
select = "0.4.2"
lazy_static = "1.2.0"
regex = "1.1.0"
glob = "0.2.11"
chrono = "0.4.6"
time = "0.1.42"
wait-timeout = "0.2.0"
