[package]
name = "fn_search_backend_web"
version = "0.1.0"
authors = ["Andrew Houts <ahouts4@gmail.com>", "Yuya Yabe <yuyabee@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "0.7"
actix = "0.7.5"
fn_search_backend = { path = ".." }
fn_search_backend_db = { path = "../db" }
serde_json = "1.0.32"
serde = "1.0.80"
radix_trie = "0.1"
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"
parking_lot = "0.6.4"
clap = "2.32.0"
env_logger = "0.5.13"
jemallocator = "0.1.9"

[dev-dependencies]
lazy_static = "1.2.0"
